# entrainement-medecine

./: .cruft.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  docker-publish.yml
conf/: nginx.conf
config/: settings.py  urls.py
docker/: nginx.conf
docs/: index.md
docs/claude/memory/: 260531-1912-setup-django-modeles.md  260531-2115-import-moodle.md  260531-2201-hierarchie-cours.md  260531-2257-tags-questions.md  260601-0025-interface-entrainement.md  260601-1221-tag-filtering-hierarchy.md  260601-1612-authentification.md  260601-1650-password-reset.md  260601-1720-inscription-requests.md  260601-1850-enrollment-packages.md  260602-0010-errata-system.md  260602-0911-admin-alerts-navbar.md  260602-1145-question-upload-moodle-xml.md  260602-1239-question-navigator.md  260602-2338-qroc-questions.md  260603-1221-admin-site-web.md  260604-1530-images-questions.md  260604-2005-ddimageortext-legende-interactive.md  260607-2255-profil-utilisateur.md  260609-2202-systeme-trophees.md  260616-2136-erratas-image-nettoyage-ui.md  260616-2207-erratas-image-bouton-unique.md  260616-2224-erratas-question-editeur-custom.md  260616-2315-quill-editeur-question-form.md  260617-1650-masquage-session-historique.md  260620-0151-ddimageortext-admin-crud-multilabel.md  260620-1157-issue59-deploiement-docker-nas.md  260630-2208-favicon.md  260630-2238-import-fixture-media-zip-double-nesting.md  260630-2320-isolation-media-root-tests.md  260701-2138-ddimageortext-ux-blur-overlay.md  260701-2245-suppression-category-question-vers-course.md  260703-1005-ddimageortext-suppression-correction-texte.md  260703-1029-ddimageortext-resize-observer.md  260709-2341-erratas-ddimageortext.md  260711-1104-navbar-responsive-hamburger.md  260711-1211-dark-mode-theme.md  260711-1400-fix-issue63-ddimageortext-comptees-stats.md  260711-1530-issue101-watchtower-label-jamais-applique.md  260712-2313-issue104-filtres-questions-admin.md  (+1 more)
docs/dev/: .nav.yml  README.md  architecture.md  deploiement-nas.md
docs/user/: .nav.yml  README.md  guide-installation.md  images-questions.md  legendes-interactives.md  mode-sombre.md  trophees.md
qcm/: admin.py  apps.py  context_processors.py  forms.py  models.py  question_upload.py  trophies.py  urls.py  views.py  views_admin.py
qcm/management/commands/: find_missing_images.py  import_fixture.py  import_moodle.py  import_question_images.py  moodle_parser.py  seed_image_erratas.py  seed_trophies.py
qcm/migrations/: 0001_initial.py  0002_add_course_moodle_id.py  0003_add_studyyear_semester.py  0004_init_p2_semesters.py  0005_add_tag_model.py  0006_training_interface_models.py  0007_add_shuffle_answers.py  0008_add_tagcategory.py  0009_add_tag_parent_ec.py  0010_add_tag_course.py  0011_add_registration_request.py  0012_add_certificate_to_registration.py  0013_add_user_enrollment.py  0014_add_course_package.py  0015_add_year_parcours_fields.py  0016_add_errata.py  0017_add_notification.py  0018_question_moodle_id_nullable.py  0019_qroc_useranswer_errata.py  0020_tag_moodle_id_nullable.py  0021_questionimage.py  0022_ddimageortext.py  0023_add_userprofile.py  0024_add_trophy.py  0025_trophy_erratas_accepted_condition.py  0026_trophy_study_year_and_zero_score.py  0027_trophy_hidden_and_year_all.py  0028_trophy_zero_score_count_tag.py  0029_add_login_event_and_login_trophies.py  0030_quizsession_hidden_by_user.py  0031_imagedropzonelabel.py  0032_question_add_course_nullable.py  0033_migrate_question_course_data.py  0034_remove_category.py  0035_errata_concerned_zone_alter_errata_error_type_and_more.py  0036_userprofile_theme.py  0037_question_updated_at.py
qcm/templates/qcm/: _chapters_partial.html  _correction.html  _ddi_zones_readonly.html  _ddimageortext_question.html  _errata_form.html  _errata_success.html  _errata_tags_and_meta.html  _notif_bell.html  _qroc_ambiguous.html  _tags_partial.html  admin_questions_preview.html  admin_questions_upload.html  base.html  configuration.html  errata_list.html  fin.html  history.html  home.html  profile.html  question.html  session_detail.html  stats.html  stats_course.html
qcm/templates/registration/: inscription.html  inscription_done.html  login.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt
qcm/templatetags/: qcm_extras.py
tests/: conftest.py  test_admin_alerts.py  test_admin_questions.py  test_admin_site.py  test_auth.py  test_ddimageortext.py  test_deployment.py  test_enrollment.py  test_errata.py  test_erratas.py  test_favicon.py  test_hierarchy.py  test_history.py  test_images.py  test_import_fixture.py  test_import_moodle.py  test_models.py  test_navbar.py  test_password_reset.py  test_profile.py  test_qroc.py  test_question_form_quill.py  test_question_navigator.py  test_registration.py  test_review_mode.py  test_settings.py  test_stats.py  test_tag_filtering.py  test_tags.py  test_theme.py  test_trophies.py  test_views.py
(+8 files in other folders)
