[project]
name = "entrainement-medecine"
version = "0.1.0"
description = "Description de votre projet de Data Science"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "entrainement-medecine Team"}
]
keywords = ["data-science", "jupyter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    "gitpython",
    "pandas",
    "numpy",
    "matplotlib",
    "django>=5.0",
    "psycopg2-binary",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "cruft",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "django-stubs[compatible-mypy]",
    "ruff",
    "mypy",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-awesome-nav",
    "pymdown-extensions",
    "mkdocs-rtd-dropdown",
    "nbdev>=2.4.6"
]

[project.urls]
Homepage = "https://github.com/camille626/entrainement-medecine"
Documentation = "https://camille626.github.io/entrainement-medecine"
Repository = "https://github.com/camille626/entrainement-medecine.git"
Issues = "https://github.com/camille626/entrainement-medecine/issues"

[project.scripts]
entrainement_medecine_setup = "scripts.setup:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Configuration uv pour la reproductibilité
[dependency-groups]
dev = ["pytest",]

# Configuration Ruff - Linter et formateur Python moderne
[tool.ruff]
line-length = 88
extend-exclude = [
    "data/*",
    "models/*",
    "logs/*",
    ".jupyter/*",
]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ERA",    # eradicate (commented code)
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]
ignore = [
    "E501",   # Line too long (ruff format s'en occupe)
    "B905",   # zip() sans strict= (Python 3.10+)
    "RET504", # Assign + return -> return direct (parfois moins lisible)
]

[tool.ruff.format]
# Style de formatage
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configuration isort intégrée
known-first-party = ["entrainement_medecine"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# Convention de nommage adaptée Data Science
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
# Règles spécifiques par type de fichier
"notebooks/*.py" = ["E402", "F401", "F841"]  # Imports, unused vars OK en notebooks
"scripts/*.py" = ["T201"]                    # print() OK dans les scripts
"tests/*.py" = ["S101", "PLR2004"]          # assert OK, magic values OK en tests

# Configuration MyPy - Vérification de types statique
[tool.mypy]
python_version = "3.11"
platform = "linux"
files = ["tests", "qcm", "config"]
plugins = ["mypy_django_plugin.main"]

# Ne pas chercher de namespace packages pour éviter la détection en double
namespace_packages = false

# Niveau de vérification
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Configuration stricte progressive
disallow_any_generics = false        # Autorisé au début
disallow_untyped_calls = false       # Autorisé au début
disallow_untyped_defs = false        # Autorisé au début
disallow_incomplete_defs = true      # Fonctions partiellement typées interdites
disallow_untyped_decorators = false  # Autorisé au début
disallow_subclassing_any = true
no_implicit_reexport = true

# Gestion des imports
ignore_missing_imports = false
follow_imports = "normal"

# Configuration pour Data Science
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "scipy.*",
    "plotly.*",
]
ignore_missing_imports = true

# Configuration spéciale pour notebooks
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Configuration tests
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "pytest",
]
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "qcm.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "config.settings"
